force-app/main/default/objects/Case/fields/Actual_Amount_To_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_To_Be_Paid__c</fullName>
    <formula>Amount_Paid__c  -  Total_Waive_Off_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The final payable amount after deducting any refunds and waivers from the original Amount To Be Paid. Calculated as: Amount To Be Paid - Total refunds and waivers</inlineHelpText>
    <label>Actual Amount To Be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>