force-app/main/default/objects/Case/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <inlineHelpText>The total amount for payment, including all outstanding charges and fees.</inlineHelpText>
    <label>Amount To Be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>