force-app/main/default/objects/Case/fields/Date_of_the_settlement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_the_settlement__c</fullName>
    <label>Date of the settlement</label>
    <type>Date</type>
</CustomField>