force-app/main/default/objects/Case/fields/Dispute_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Reason__c</fullName>
    <inlineHelpText>Captures the specific issue or justification for initiating a dispute</inlineHelpText>
    <label>Dispute Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>