force-app/main/default/objects/Case/fields/Dispute_Status__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Status__c</fullName>
    <label>Dispute Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispute Initiated</fullName>
            </value>
            <value>
                <fullName>Dispute Approved</fullName>
            </value>
            <value>
                <fullName>Dispute Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>