force-app/main/default/objects/Case/fields/DPD__c.field-meta.xml
<CustomField>
    <fullName>DPD__c</fullName>
    <formula>TODAY()- Last_EMI_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DPD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>