force-app/main/default/objects/Case/fields/DPD_category__c.field-meta.xml
<CustomField>
    <fullName>DPD_category__c</fullName>
    <label>DPD category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard (STD)</fullName>
            </value>
            <value>
                <fullName>Special mention account (SMA)</fullName>
            </value>
            <value>
                <fullName>Sub-standard (SUB)</fullName>
            </value>
            <value>
                <fullName>Doubtful (DBT)</fullName>
            </value>
            <value>
                <fullName>Loss (LSS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>