force-app/main/default/objects/Case/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>