force-app/main/default/objects/Case/fields/FOS_Agent__c.field-meta.xml
<CustomField>
    <fullName>FOS_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FOS Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>