force-app/main/default/objects/Case/fields/FOS_Agent_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>FOS_Agent_Assigned_Date__c</fullName>
    <label>FOS Agent Assigned Date</label>
    <type>Date</type>
</CustomField>