force-app/main/default/objects/Case/fields/Is_Legal__c.field-meta.xml
<CustomField>
    <fullName>Is_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Legal</label>
    <type>Checkbox</type>
</CustomField>