force-app/main/default/objects/Case/fields/Is_Receipt_Send__c.field-meta.xml
<CustomField>
    <fullName>Is_Receipt_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Receipt Send</label>
    <type>Checkbox</type>
</CustomField>