force-app/main/default/objects/Case/fields/Last_EMI_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_EMI_Due_Date__c</fullName>
    <label>Last EMI Due Date</label>
    <type>Date</type>
</CustomField>