force-app/main/default/objects/Case/fields/Loan_No__c.field-meta.xml
<CustomField>
    <fullName>Loan_No__c</fullName>
    <label>Loan No.</label>
    <length>250</length>
    <type>Text</type>
</CustomField>