force-app/main/default/objects/Case/fields/PTP_Date__c.field-meta.xml
<CustomField>
    <fullName>PTP_Date__c</fullName>
    <label>Last PTP Date</label>
    <type>Date</type>
</CustomField>