force-app/main/default/objects/Case/fields/Reason_for_the_settlement__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_the_settlement__c</fullName>
    <label>Reason for the settlement</label>
    <type>TextArea</type>
</CustomField>