force-app/main/default/objects/Case/fields/Settelment__c.field-meta.xml
<CustomField>
    <fullName>Settelment__c</fullName>
    <label>Settlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for approval</fullName>
            </value>
            <value>
                <fullName>Settlement Approved</fullName>
            </value>
            <value>
                <fullName>Settlement Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>