force-app/main/default/objects/Case/fields/Tenure_Type__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Type__c</fullName>
    <label>Tenure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short -Term</fullName>
            </value>
            <value>
                <fullName>Mid - Term</fullName>
            </value>
            <value>
                <fullName>Long Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>