force-app/main/default/objects/Case/fields/Total_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Collected__c</fullName>
    <label>Total Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>