force-app/main/default/objects/Case/fields/Total_EMI_due__c.field-meta.xml
<CustomField>
    <fullName>Total_EMI_due__c</fullName>
    <inlineHelpText>The sum of all pending Equated Monthly Installment (EMI) payments currently due.</inlineHelpText>
    <label>Total EMI due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>