force-app/main/default/objects/Case/fields/Total_Waive_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Waive_Off_Amount__c</fullName>
    <inlineHelpText>This field represents the total amount that has been refunded to the customer or waived off from their charges</inlineHelpText>
    <label>Total Refund and Waiver Amount</label>
    <summarizedField>Refund_and_Waive_off_Request__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Refund_and_Waive_off_Request__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Refund_and_Waive_off_Request__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>