force-app/main/default/objects/Case/validationRules/Account_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Please provide an account</errorMessage>
</ValidationRule>