force-app/main/default/objects/Case/validationRules/Amount_To_Be_Paid_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_To_Be_Paid_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Amount_Paid__c)</errorConditionFormula>
    <errorMessage>Amount to be paid is required.</errorMessage>
</ValidationRule>