force-app/main/default/objects/Case/validationRules/Amount_to_be_Paid_Must_Be_Greater_Than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_to_be_Paid_Must_Be_Greater_Than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_Paid__c   &lt;=  0</errorConditionFormula>
    <errorMessage>Amount to be paid must be greater than 0</errorMessage>
</ValidationRule>