force-app/main/default/objects/Case/validationRules/Contact_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( ContactId )</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Please provide a contact</errorMessage>
</ValidationRule>