force-app/main/default/objects/Case/validationRules/Due_date_should_be_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_date_should_be_past</fullName>
    <active>true</active>
    <errorConditionFormula>Last_EMI_Due_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Last_EMI_Due_Date__c</errorDisplayField>
    <errorMessage>EMI due date must be in the past</errorMessage>
</ValidationRule>