force-app/main/default/objects/Case/validationRules/EMI_amount_less_than_amount_to_be_paid.validationRule-meta.xml
<ValidationRule>
    <fullName>EMI_amount_less_than_amount_to_be_paid</fullName>
    <active>true</active>
    <errorConditionFormula>Total_EMI_due__c &gt; Amount_Paid__c</errorConditionFormula>
    <errorMessage>The Total EMI amount should be less than the amount to be paid</errorMessage>
</ValidationRule>