force-app/main/default/objects/Case/validationRules/Financial_Account_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Financial_Account_is_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Financial_Account__c)</errorConditionFormula>
    <errorMessage>Please provide a financial account</errorMessage>
</ValidationRule>