force-app/main/default/objects/Case/validationRules/Last_EMI_Due_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_EMI_Due_Date_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Last_EMI_Due_Date__c )</errorConditionFormula>
    <errorMessage>Last EMI Due Date is required.</errorMessage>
</ValidationRule>