force-app/main/default/objects/Case/validationRules/Product_Type_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Type_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK( TEXT(Product_Type__c) ), TRUE, FALSE )</errorConditionFormula>
    <errorMessage>Product Type is required.</errorMessage>
</ValidationRule>