force-app/main/default/objects/Case/validationRules/Total_EMI_Due_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_EMI_Due_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Total_EMI_due__c )</errorConditionFormula>
    <errorMessage>Total Emi Due amount is required</errorMessage>
</ValidationRule>