force-app/main/default/objects/Case/listViews/All_PTP_cases.listView-meta.xml
<ListView>
    <fullName>All_PTP_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>PTP_Date__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PTP_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All PTP cases</label>
</ListView>