force-app/main/default/objects/Case/listViews/Dispute_Approved_Queue.listView-meta.xml
<ListView>
    <fullName>Dispute_Approved_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Dispute Approved</value>
    </filters>
    <label>Dispute Approved Queue</label>
</ListView>