force-app/main/default/objects/Case/listViews/Dispute_Approved_queue_Case.listView-meta.xml
<ListView>
    <fullName>Dispute_Approved_queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Dispute Approved queue</label>
    <queue>Dispute_Approved_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>