force-app/main/default/objects/Case/listViews/Fraud_Queue.listView-meta.xml
<ListView>
    <fullName>Fraud_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Fraud Queue</label>
</ListView>