force-app/main/default/objects/Case/listViews/Handling_FOS_Agent_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Handling_FOS_Agent_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Handling FOS Agent Queue</label>
    <queue>Handling_FOS_Agent_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>