force-app/main/default/objects/Case/listViews/Legal_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Legal_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal Queue</label>
    <queue>Legal_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>