force-app/main/default/objects/Case/listViews/Omni_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Omni_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Omni Queue</label>
    <queue>Omni_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>