force-app/main/default/objects/Case/listViews/Open_Cases_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Open_Cases_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Open Cases Queue</label>
    <queue>Open_Cases_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>