force-app/main/default/objects/Case/listViews/Paid_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Paid_Cases_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CASE_NUMBER</field>
        <operation>contains</operation>
        <value>2272,2269</value>
    </filters>
    <label>Paid Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>