force-app/main/default/objects/Case/listViews/Repossession_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Repossession_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Repossession Queue</label>
    <queue>Repossession_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>